--- a/app/src/main/res/layout/layout_company_header_view.xml
+++ b/app/src/main/res/layout/layout_company_header_view.xml
@@ -27,15 +27,30 @@
             android:textColor="@color/white"
             android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/text_company_location"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="10dp"
-            android:textColor="#E2FDE0"
-            android:textSize="13sp" />
+            android:layout_marginTop="10dp">
+
+            <TextView
+                android:id="@+id/text_company_location"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:textColor="#E2FDE0"
+                android:layout_weight="1"
+                android:textSize="13sp" />
+
+            <TextView
+                android:id="@+id/text_distance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="15dp"
+                android:textColor="#E2FDE0"
+                android:textSize="13sp" />
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/text_company_state"
